--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
     <!--Inician las cards secundarias-->
     <div class="card mb-3">
-      <img src="./assets/imagenes/genshin.jpg" class="card-img-top" alt="...">
+      <img src="./assets/imagenes/genshin.jpg" class="card-img-top" alt="Kazuha, un viajero de Inazuma.">
       <div class="card-body">
         <h5 class="card-title pt-5 text-center">Historia</h5>
         <p class="card-text pb-5 text-center">Nos presentan a Éter y Lumina, dos hermanos mellizos que viajaban entre varios mundos durante años, en uno de sus tantos viajes, los hermanos terminaron llegando a Teyvat. <br> Un mundo que estaba en guerra, al percatarse de eso intentaron marcharse de ahí, pero una misteriosa diosa les alcanza.</p>
@@ -76,8 +76,9 @@
           Surca el vasto cielo de este mundo, nada a través de lagos y mares, y escala montañas imponentes. <br>
           Explora más allá de los caminos transitados y descubre los muchos secretos ocultos en este mundo lleno de maravillas.</p>
       </div>
-      <img src="./assets/imagenes/genshin....jpg" class="card-img-bottom" alt="...">
-      <img src="./assets/imagenes/genshin.......png" class="card-img-bottom" alt="...">
+      <img src="./assets/imagenes/genshin....jpg" class="card-img-bottom" alt="Xiao, Adeptus - Región de Liyue">
+      <img src="./assets/imagenes/arconte cielo" class="card-img-bottom" alt="Ciudad donde viven los Arcontes">
+      <img src="./assets/imagenes/desierto.webp" class="card-img-bottom" alt="Desierto de Sumeru">
     </div>
   </section>
   <!--terminan las cards-->
