--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -56,45 +56,47 @@
     <!--Inicia la galería-->
     <div class="gallery-container">
         <div class="gallery-item">
-            <img src="../assets/imagenes/genshin_32_4K.jpg" alt="" class="gallery__img">
+            <img src="../assets/imagenes/genshin_32_4K.jpg" alt="Jean, Catedral de Mondstadt" class="gallery__img">
             <h2 class="gallery-title"></h2>
         </div>
         <div class="gallery-item">
-            <img src="../assets/imagenes/genshin_27_4K.jpg" alt="" class="gallery__img">
+            <img src="../assets/imagenes/genshin_27_4K.jpg" alt="Ámber, personaje jugable de 4 estrellas - Estatua del Arconte Anemo, Región de Mondstadt" class="gallery__img">
             <h2 class="gallery-title"></h2>
         </div>
         <div class="gallery-item">
-            <img src="../assets/imagenes/genshin_23_4K.jpg" alt="" class="gallery__img">
+            <img src="../assets/imagenes/genshin_23_4K.jpg" alt="Fan Art - Ninguang, personaje jugable de 4 estrellas - Región Liyue" class="gallery__img">
             <h2 class="gallery-title"></h2>
         </div>
         <div class="gallery-item">
-            <img src="../assets/imagenes/genshin-impact-2.1.jpg" alt="" class="gallery__img">
+            <img src="../assets/imagenes/shongli.png" alt="Fan Art de Shongli, Arconte Geo" class="gallery__img">
             <h2 class="gallery-title"></h2>
         </div>
         <div class="gallery-item">
-            <img src="../assets/imagenes/Noelle-Genshin Impact.jpg" alt="" class="gallery__img">
+            <img src="../assets/imagenes/Noelle-Genshin Impact.jpg" alt="Noelle, personaje jugable de 4 estrellas - Región de Mondstadt" class="gallery__img">
             <h2 class="gallery-title"></h2>
         </div>
         <div class="gallery-item">
-            <img src="../assets/imagenes/genshin_14_4K.jpg" alt="" class="gallery__img">
+            <img src="../assets/imagenes/genshin_14_4K.jpg" alt="Escultor de la Luna, un adepto de Liyue" class="gallery__img">
             <h2 class="gallery-title"></h2>
         </div>
         <div class="gallery-item">
-            <img src="../assets/imagenes/genshin_11_4K.jpg" alt="" class="gallery__img">
+            <img src="../assets/imagenes/genshin_11_4K.jpg" alt="Lumine, Paimon y Xiangling - Wangshu Inn, Hotel de Liyue" class="gallery__img">
             <h2 class="gallery-title"></h2>
         </div>
         <div class="gallery-item">
-            <img src="../assets/imagenes/genshin_26_4K.jpg" alt="" class="gallery__img">
+            <img src="../assets/imagenes/genshin_26_4K.jpg" alt="Klee, personaje jugable de 5 estrellas - Región de Mondstadt" class="gallery__img">
             <h2 class="gallery-title"></h2>
         </div>
         <div class="gallery-item">
-            <img src="../assets/imagenes/genshin_20_4K.jpg" alt="" class="gallery__img">
+            <img src="../assets/imagenes/genshin_20_4K.jpg" alt="Fan Art de Ámber, Lumine, Bárbara, Paimon y Jean - Región de Mondstadt" class="gallery__img">
             <h2 class="gallery-title"></h2>
         </div>
     </div>
-    <!--termina la galería-->
+    <!--Termina la galería-->
+    
 </body>
 <!--Termina el body-->
+
 <!--Inicia el footer-->
 <footer>
     <div class="container-fluid-footer ">
