--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -56,7 +56,7 @@
   <section class="eventos">
     <h4 class="proximamente">PRÓXIMAMENTE...</h4>
     <p>"The wind returns for the fairbrew."</p>
-    <img src="../assets/imagenes/event.jpg" alt="Imagen de Evento">
+    <img src="../assets/imagenes/the wind return.jpg" alt="Imagen de Evento">
   </section>
 </body>
 <!--Termina el body-->
