--- a/pages/regiones.html
+++ b/pages/regiones.html
@@ -38,10 +38,10 @@
             </label>
 
             <!--Logo-->
-            <a href="/index.html"><img src="../assets/imagenes/logo.png" alt="Genshin Impact"></a>
+            <a href="../index.html"><img src="../assets/imagenes/logo.png" alt="Genshin Impact"></a>
             
             <ul class="menu-box">
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="personajes.html">Personajes</a></li>
                 <li><a href="armas.html">Armas</a></li>
                 <li><a href="materiales.html">Materiales</a></li>
@@ -130,12 +130,15 @@
         <div class="concept concept-four">
             <h1>Mondstadt</h1>
         </div>
+
+        <!--Presentación de Khaenri'Ah-->
         <div class="concept concept-five">
             <h1 class="word">
                 <span class="char">K</span>
                 <span class="char">H</span>
                 <span class="char">A</span>
                 <span class="char">E</span>
+                <span class="char">N</span>
                 <span class="char">R</span>
                 <span class="char">I</span>
                 <span class="char">'</span>
@@ -146,8 +149,18 @@
         
         <!--Presentación de SNEZHNAYA-->
         <div class="concept concept-seven">
-            <h1>Snezhnaya</h1>
-        </div>
+            <h1 class="word">
+              <div class="char" data-content="S">S</div>
+              <div class="char" data-content="N">N</div>
+              <div class="char" data-content="E">E</div>
+              <div class="char" data-content="Z">Z</div>
+              <div class="char" data-content="H">H</div>
+              <div class="char" data-content="N">N</div>
+              <div class="char" data-content="A">A</div>
+              <div class="char" data-content="Y">Y</div>
+              <div class="char" data-content="A">A</div>
+            </h1>
+          </div>
     </div>
 
 </body>
@@ -165,14 +178,14 @@
 
         <div class="row justify-content-around text-center text-md-start">
             <div class="col-md-2 text-center">
-                <a href="/index.html"><img src="../assets/imagenes/logo.png" width="200" alt="Genshin Impact"></a>
+                <a href="../index.html"><img src="../assets/imagenes/logo.png" width="200" alt="Genshin Impact"></a>
             </div>
             <div class="col-md-2">
                 <ul class="list-unstyled">
                     <li class="fw-bold my-2">¡Explora!</li>
                     <li> <a href="eventos.html" class="text-decoration-none text-white">Eventos</a> </li>
                     <li> <a href="contacto.html" class="text-decoration-none text-white">Ayuda</a> </li>
-                    <li> <a href="/index.html" class="text-decoration-none text-white">Home</a> </li>
+                    <li> <a href="../index.html" class="text-decoration-none text-white">Home</a> </li>
                     <li> <a href="https://genshin.hoyoverse.com/es/home" class="text-decoration-none text-white">Página Oficial</a> </li>
 
                 </ul>
@@ -181,7 +194,7 @@
         <hr>
         <div class="row-copy">
             <div class="col-md-12 text-center pt-2">
-                <p>&copy; 2022 Copyright <a href="/index.html" class="text-white">Genshin Impact</a></p>
+                <p>&copy; 2022 Copyright <a href="../index.html" class="text-white">Genshin Impact</a></p>
             </div>
         </div>
     </div>
