--- a/pages/armas.html
+++ b/pages/armas.html
@@ -38,10 +38,10 @@
             </label>
 
             <!--Logo-->
-            <a href="/index.html"><img src="../assets/imagenes/logo.png"></a>
+            <a href="../index.html"><img src="../assets/imagenes/logo.png"></a>
             
             <ul class="menu-box">
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="personajes.html">Personajes</a></li>
                 <li><a href="armas.html">Armas</a></li>
                 <li><a href="materiales.html">Materiales</a></li>
@@ -260,16 +260,15 @@
                     <li class="fw-bold my-2">¡Explora!</li>
                     <li> <a href="eventos.html" class="text-decoration-none text-white">Eventos</a> </li>
                     <li> <a href="contacto.html" class="text-decoration-none text-white">Ayuda</a> </li>
-                    <li> <a href="/index.html" class="text-decoration-none text-white">Home</a> </li>
+                    <li> <a href="../index.html" class="text-decoration-none text-white">Home</a> </li>
                     <li> <a href="https://genshin.hoyoverse.com/es/home" class="text-decoration-none text-white">Página Oficial</a> </li>
-
                 </ul>
             </div>
         </div>
         <hr>
         <div class="row-copy">
             <div class="col-md-12 text-center pt-2">
-                <p>&copy; 2022 Copyright <a href="/index.html" class="text-white">Genshin Impact</a></p>
+                <p>&copy; 2022 Copyright <a href="../index.html" class="text-white">Genshin Impact</a></p>
             </div>
         </div>
     </div>
